[package]
name = "snmp"
version = "0.1.0"
authors = ["matthew"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
rand = "0.8.2"
rasn = {git="https://github.com/mds5000/rasn", branch="fix-implicit-seq"}

[[bin]]
name = "sget"
path = "src/bin/main.rs"